data/derived/comb/progs/unify/prog4866.ml.out
Characters 171-172:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type (int * int) list -> 'a -> int
       but an expression was expected of type
         (int * int) list -> 'a -> (int * int) list
       Type int is not compatible with type (int * int) list 
